<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="bookData"
            type="com.caraquri.bookmanager_android.model.BookDataModel" />
    </data>

    <RelativeLayout
        android:id="@+id/book_add_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/add_page_book_image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/book_image_picture"
            android:layout_marginTop="@dimen/image_top_margin"
            android:layout_marginLeft="@dimen/image_left_margin"
            android:layout_marginStart="@dimen/image_left_margin" />

        <Button
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/add_page_book_image"
            android:layout_toRightOf="@+id/add_page_book_image"
            android:layout_marginLeft="@dimen/add_image_button_left_margin"
            android:layout_marginStart="@dimen/add_image_button_left_margin"
            android:layout_marginTop="@dimen/add_image_button_top_margin"
            android:text="@string/add_image" />

        <TextView
            android:id="@+id/book_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:layout_below="@+id/add_page_book_image"
            android:layout_alignLeft="@+id/add_page_book_image"
            android:layout_alignStart="@+id/add_page_book_image"
            android:layout_marginTop="@dimen/book_title_text_margin" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/book_title_field"
            android:layout_width="@dimen/text_field_width"
            android:layout_height="wrap_content"
            android:hint=""
            android:layout_below="@+id/book_title_text"
            android:layout_alignLeft="@+id/add_page_book_image"
            android:layout_alignStart="@+id/add_page_book_image"
            android:layout_marginTop="@dimen/margin_of_field_and_text" />

        <TextView
            android:id="@+id/book_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_price"
            android:layout_below="@+id/book_title_field"
            android:layout_alignLeft="@+id/add_page_book_image"
            android:layout_alignStart="@+id/add_page_book_image"
            android:layout_marginTop="@dimen/margin_of_field_and_text" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/book_price_field"
            android:layout_width="@dimen/text_field_width"
            android:layout_height="wrap_content"
            android:hint=""
            android:layout_below="@+id/book_price_text"
            android:layout_alignLeft="@+id/add_page_book_image"
            android:layout_alignStart="@+id/add_page_book_image"
            android:layout_marginTop="@dimen/margin_of_field_and_text" />

        <TextView
            android:id="@+id/book_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_date"
            android:layout_below="@+id/book_price_field"
            android:layout_alignLeft="@+id/add_page_book_image"
            android:layout_alignStart="@+id/add_page_book_image"
            android:layout_marginTop="@dimen/margin_of_field_and_text" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/book_date_field"
            android:layout_width="@dimen/text_field_width"
            android:layout_height="wrap_content"
            android:hint=""
            android:layout_below="@+id/book_date_text"
            android:layout_alignLeft="@+id/add_page_book_image"
            android:layout_alignStart="@+id/add_page_book_image"
            android:layout_marginTop="@dimen/margin_of_field_and_text"
            android:focusable="false" />
    </RelativeLayout>
</layout>